--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,13 +19,13 @@
     },
     {
       "src": "android-chrome-192x192.png",
-      "type": "image/png"
-      "sizes": "192x192",
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
       "src": "android-chrome-512x512.png",
-      "type": "image/png"
-      "sizes": "512x512",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
